<resources>
    <string name="app_name">Grocery</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_product_page_title">New Product</string>
    <string name="new_product_name">Enter Product Name</string>
    <string name="edit_new_product_name">Product Name</string>
<!--    <string name="new_product_category">Enter Product Category</string>-->
<!--    <string name="edit_product_category">Product Category</string>-->
    <string name="price">Price per Unit</string>
    <string name="unit">Unit</string>
    <string name="quantity">Quantity</string>
    <string name="submit_button">Submit</string>
    <string name="quantity_left_less_than_0">"Quantity cannot be less than 0"</string>
    <!-- Strings related to store owner home page -->
    <string name="store_owner_orders_page">Store Home</string>
    <string name="store_home_orders_title">Store Orders</string>
    <string-array name="statuses">
        <item>Created</item>
        <item>Waiting Pickup</item>
        <item>Picked Up</item>
    </string-array>
    <string-array name="sample_products_names">
        <item>Coke Cola (bottle 591ml)</item>
        <item>Aquafina bottled water (500ml)</item>
        <item>Organic bananas</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
    </string-array>
    <string-array name="sample_prices">
        <item>$1.99</item>
        <item>$1.99</item>
        <item>$1.50</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
    </string-array>
    <string-array name="sample_quantities">
        <item>20</item>
        <item>30</item>
        <item>10</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="sample_units">
        <item>bottle</item>
        <item>bottle</item>
        <item>Unit</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
    </string-array>
    <string-array name="sample_customer_names">
        <item>Alex Honnold</item>
        <item>James May</item>
        <item>Rebecca Black</item>
        <item>Bobby Lee</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
    </string-array>
    <string-array name="sample_order_times">
        <item>12:30pm</item>
        <item>12:34pm</item>
        <item>1:00pm</item>
        <item>2:01pm</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
        <item>Test</item>
    </string-array>
    <string name="button_my_products">My Products</string>

    <!-- Strings related to store owner order details page -->
    <string name="store_owner_orders_details_page">Order Details</string>
    <string-array name="sample_order_items">
        <item>Watermelon</item>
        <item>Carrots</item>
        <item>Asparagus</item>
        <item>Fresh Vegetables</item>
        <item>Fresh Vegetables2</item>
        <item>Fresh Vegetables3</item>
        <item>Fresh Vegetables4</item>
        <item>Fresh Vegetables5</item>
    </string-array>
    <string-array name="sample_order_prices">
        <item>$8.99</item>
        <item>$8.99</item>
        <item>$0.99</item>
        <item>$1.99</item>
        <item>$3.99</item>
        <item>$2.99</item>
        <item>$13.99</item>
        <item>$23.99</item>
    </string-array>
    <string name="tax_rate">13%</string>
    <string name="name">Name:</string>
    <string name="product">Product</string>
    <string name="status">Status:</string>
    <string name="amount">Amount</string>
    <string name="item_total">Item Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="price_per_unit">%1$s \n/ %2$s</string>
    <string name="order_complete">Mark as Ready for Pickup</string>
    <string name="store_owner_sign_up">Store Owner Sign-Up</string>
    <string name="store_owner_sign_up_id">Store ID</string>
    <string name="store_owner_sign_up_error">Store ID already exists</string>
    <string name="store_owner_sign_up_button">Sign Up</string>
    <string name="store_owner_sign_up_password">Password</string>

    <!-- Strings related to customer home page -->
    <string name="customer_store_lists">List of Stores Available</string>
    <string name="customer_button_orders">Your Orders</string>

    <!-- Strings related to customer order page -->
    <string name="customer_my_orders">My Orders</string>

    <!-- Strings related to customer order details page -->
    <string-array name="customer_statuses">
        <item>Sent to Store</item>
        <item>Ready for Pickup</item>
        <item>Picked Up</item>
    </string-array>
    <string name="place_order">Place Order</string>
    <string name="store_name">Store:</string>
    <string name="remove_from_cart">Remove from Cart</string>
</resources>