<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/customer_cart">

    <TextView
        android:id="@+id/cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/store_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/cart_name"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/productTextView"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="100dp"
            android:text="@string/product"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="15dp" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="30dp" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/cart_subtotal" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_name" />

    <ScrollView
        android:id="@+id/cartScrollView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cart_subtotal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/cart_tax"
        app:layout_constraintStart_toStartOf="@+id/cartScrollView" />

    <TextView
        android:id="@+id/cart_sub_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cart_subtotal"
        app:layout_constraintStart_toEndOf="@+id/cart_subtotal" />

    <TextView
        android:id="@+id/cart_tax"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/tax"
        app:layout_constraintBottom_toTopOf="@+id/cart_total"
        app:layout_constraintStart_toStartOf="@+id/cart_subtotal" />

    <TextView
        android:id="@+id/cart_tax_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cart_tax"
        app:layout_constraintStart_toEndOf="@+id/cart_tax" />

    <TextView
        android:id="@+id/cart_total"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/button_place_order"
        app:layout_constraintStart_toStartOf="@+id/cart_tax" />

    <TextView
        android:id="@+id/cart_order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/cart_total"
        app:layout_constraintStart_toEndOf="@+id/cart_total" />

    <Button
        android:id="@+id/button_place_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="writeOrderToStore"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cart_store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cart_name"
        app:layout_constraintStart_toEndOf="@+id/cart_name" />

</androidx.constraintlayout.widget.ConstraintLayout>